--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -87,6 +87,7 @@
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="AttributeRetrievalTests.cs" />
+    <Compile Include="TimestampHelper.cs" />
     <Compile Include="TimestampAttribute.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
