--- a/.gitignore
+++ b/.gitignore
@@ -35,9 +35,7 @@
 *.dotCover
 
 ##  If you have NuGet Package Restore enabled, uncomment this
-packages/
-ForSample/
-*NugetBuild*
+nugets/
 
 # Visual Studio profiler
 *.psess
