--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -7,7 +7,7 @@
     <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
     <PackageReference Include="Xunit" Version="2.4.1" />
     <ProjectReference Include="..\Timestamp\Timestamp.csproj" />
   </ItemGroup>
