--- a/src/Timestamp/Timestamp.csproj
+++ b/src/Timestamp/Timestamp.csproj
@@ -26,6 +26,7 @@
     <Reference Include="Microsoft.Build.Utilities.v4.0" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.0" PrivateAssets="All" Condition="$(Configuration) == 'Release'" />
     <Compile Remove="TimestampAttribute.cs" />
     <EmbeddedResource Include="TimestampAttribute.cs" />
     <Content Include="Timestamp.targets">
