--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -4,5 +4,6 @@
     <Version>1.0.2</Version>
     <AssemblyVersion>1.0.0</AssemblyVersion>
     <LangVersion>preview</LangVersion>
+    <ResolveAssemblyReferencesSilent>true</ResolveAssemblyReferencesSilent>
   </PropertyGroup>
 </Project>
