--- a/src/Tests/Tests.csproj
+++ b/src/Tests/Tests.csproj
@@ -6,8 +6,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
     <PackageReference Include="ProjectDefaults" Version="1.0.126" PrivateAssets="all" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.5.8" PrivateAssets="all" />
-    <PackageReference Include="xunit" Version="2.7.1" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.8.0" PrivateAssets="all" />
+    <PackageReference Include="Xunit" Version="2.8.0" />
     <ProjectReference Include="..\Timestamp\Timestamp.csproj" />
     <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
   </ItemGroup>
