--- a/src/Timestamp/Timestamp.csproj
+++ b/src/Timestamp/Timestamp.csproj
@@ -18,14 +18,15 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Build.Tasks.Core" Version="17.13.9" PrivateAssets="All" />
-    <PackageReference Include="Polyfill" Version="7.27.0" PrivateAssets="all" />
+    <PackageReference Include="Polyfill" Version="7.31.0" PrivateAssets="all" />
     <Compile Remove="TimestampAttribute.cs" />
     <EmbeddedResource Include="TimestampAttribute.cs" />
     <Content Include="Timestamp.targets">
       <Pack>true</Pack>
       <PackagePath>build\</PackagePath>
     </Content>
-    <PackageReference Include="ProjectDefaults" Version="1.0.150" PrivateAssets="all" />
+    <PackageReference Include="ProjectDefaults" Version="1.0.152" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.Sbom.Targets" PrivateAssets="all" Version="3.1.0" />
   </ItemGroup>
   <Target Name="IncludeTaskFiles">
     <ItemGroup>
